Bug 1559627 - More reliably detect position changes during reframe. r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D35157