layout/base/RestyleManager.cpp
@@ -1546,23 +1546,6 @@ void RestyleManager::ProcessRestyledFrames(nsStyleChangeList& aChangeList) {
     }
 
     if (hint & nsChangeHint_ReconstructFrame) {
-      // Record whether this frame was absolutely positioned before and after
-      // frame construction, to detect changes for scroll anchor adjustment
-      // suppression.
-      bool wasAbsPosStyle = false;
-      ScrollAnchorContainer* previousAnchorContainer = nullptr;
-      AutoWeakFrame previousAnchorContainerFrame;
-      if (frame) {
-        wasAbsPosStyle = frame->StyleDisplay()->IsAbsolutelyPositionedStyle();
-        previousAnchorContainer = ScrollAnchorContainer::FindFor(frame);
-
-        // It's possible for the scroll anchor container to be destroyed by
-        // frame construction, so use a weak frame to detect this.
-        if (previousAnchorContainer) {
-          previousAnchorContainerFrame = previousAnchorContainer->Frame();
-        }
-      }
-
       // If we ever start passing true here, be careful of restyles
       // that involve a reframe and animations.  In particular, if the
       // restyle we're processing here is an animation restyle, but
@@ -1575,33 +1558,6 @@ void RestyleManager::ProcessRestyledFrames(nsStyleChangeList& aChangeList) {
       frameConstructor->RecreateFramesForContent(
           content, nsCSSFrameConstructor::InsertionKind::Sync);
       frame = content->GetPrimaryFrame();
-
-      // See the check above for absolutely positioned style.
-      bool isAbsPosStyle = false;
-      ScrollAnchorContainer* newAnchorContainer = nullptr;
-      if (frame) {
-        isAbsPosStyle = frame->StyleDisplay()->IsAbsolutelyPositionedStyle();
-        newAnchorContainer = ScrollAnchorContainer::FindFor(frame);
-      }
-
-      // If this frame construction was due to a change in absolute
-      // positioning, then suppress scroll anchor adjustments in the scroll
-      // anchor container the frame was in, and the one it moved into.
-      //
-      // This isn't entirely accurate to the specification, which requires us
-      // to do this for all frames that change being absolutely positioned. It's
-      // possible for multiple style changes to cause frame reconstruction and
-      // coalesce, which could cause a suppression trigger to be missed. It's
-      // unclear whether this will be an issue as suppression triggers are just
-      // heuristics.
-      if (wasAbsPosStyle != isAbsPosStyle) {
-        if (previousAnchorContainerFrame) {
-          previousAnchorContainer->SuppressAdjustments();
-        }
-        if (newAnchorContainer) {
-          newAnchorContainer->SuppressAdjustments();
-        }
-      }
     } else {
       NS_ASSERTION(frame, "This shouldn't happen");
 
@@ -2525,8 +2481,11 @@ static void UpdateBackdropIfNeeded(nsIFrame* aFrame, ServoStyleSet& aStyleSet,
   MOZ_ASSERT(backdropFrame->GetParent()->IsViewportFrame() ||
              backdropFrame->GetParent()->IsCanvasFrame());
   nsTArray<nsIFrame*> wrappersToRestyle;
-  ServoRestyleState state(aStyleSet, aChangeList, wrappersToRestyle);
+  nsTArray<nsIFrame*> anchorsToSuppress;
+  ServoRestyleState state(aStyleSet, aChangeList, wrappersToRestyle,
+                          anchorsToSuppress);
   nsIFrame::UpdateStyleOfOwnedChildFrame(backdropFrame, newStyle, state);
+  MOZ_ASSERT(anchorsToSuppress.IsEmpty());
 }
 
 static void UpdateFirstLetterIfNeeded(nsIFrame* aFrame,
@@ -2780,6 +2739,12 @@ bool RestyleManager::ProcessPostTraversal(Element* aElement,
   // XXXbholley: We should teach the frame constructor how to clear the dirty
   // descendants bit to avoid the traversal here.
   if (changeHint & nsChangeHint_ReconstructFrame) {
+    if (wasRestyled && styleFrame &&
+        styleFrame->StyleDisplay()->IsAbsolutelyPositionedStyle() !=
+            upToDateStyleIfRestyled->StyleDisplay()
+                ->IsAbsolutelyPositionedStyle()) {
+      aRestyleState.AddPendingScrollAnchorSuppression(styleFrame);
+    }
     ClearRestyleStateFromSubtree(aElement);
     return true;
   }
@@ -3079,16 +3044,32 @@ void RestyleManager::DoProcessPendingRestyles(ServoTraversalFlags aFlags) {
     nsStyleChangeList currentChanges;
     bool anyStyleChanged = false;
 
+    nsTArray<RefPtr<nsIContent>> anchorContentToSuppress;
+
     // Recreate styles , and queue up change hints (which also handle lazy frame
     // construction).
     {
       AutoRestyleTimelineMarker marker(presContext->GetDocShell(), false);
       DocumentStyleRootIterator iter(doc->GetServoRestyleRoot());
+      nsTArray<nsIFrame*> anchorsToSuppress;
       while (Element* root = iter.GetNextStyleRoot()) {
         nsTArray<nsIFrame*> wrappersToRestyle;
-        ServoRestyleState state(*styleSet, currentChanges, wrappersToRestyle);
+        ServoRestyleState state(*styleSet, currentChanges, wrappersToRestyle,
+                                anchorsToSuppress);
         ServoPostTraversalFlags flags = ServoPostTraversalFlags::Empty;
         anyStyleChanged |= ProcessPostTraversal(root, nullptr, state, flags);
+      }
+
+      // We want to suppress adjustments the current (before-change) scroll
+      // anchor container now, and save a reference to the content node so that
+      // we can suppress them in the after-change scroll anchor .
+      anchorContentToSuppress.SetCapacity(anchorsToSuppress.Length());
+      for (nsIFrame* frame : anchorsToSuppress) {
+        MOZ_ASSERT(frame->GetContent());
+        if (auto* container = ScrollAnchorContainer::FindFor(frame)) {
+          container->SuppressAdjustments();
+        }
+        anchorContentToSuppress.AppendElement(frame->GetContent());
       }
     }
 
@@ -3122,6 +3103,16 @@ void RestyleManager::DoProcessPendingRestyles(ServoTraversalFlags aFlags) {
         newChanges.Clear();
       }
       mReentrantChanges = nullptr;
+    }
+
+    // Suppress adjustments in the after-change scroll anchors if needed, now
+    // that we're done reframing everything.
+    for (nsIContent* content : anchorContentToSuppress) {
+      if (nsIFrame* frame = content->GetPrimaryFrame()) {
+        if (auto* container = ScrollAnchorContainer::FindFor(frame)) {
+          container->SuppressAdjustments();
+        }
+      }
     }
 
     if (anyStyleChanged) {
